WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305628
Regression(
305673@main
): Crash under RefCountDebugger::applyRefDerefThreadingCheck()
https://bugs.webkit.org/show_bug.cgi?id=305628
Summary
Regression(305673@main): Crash under RefCountDebugger::applyRefDerefThreading...
Chris Dumez
Reported
2026-01-15 23:49:53 PST
305673@main
introduced a thread safety issue: ``` Thread 8 Crashed:: Dispatch queue: com.apple.root.user-initiated-qos.cooperative 0 JavaScriptCore 0x10df43d88 WTFCrash + 0 1 WebCore 0x324a1e068 WTF::RefCountDebugger::applyRefDerefThreadingCheck(unsigned int, WTF::RefCountIsThreadSafe) const + 232 2 WebCore 0x324a1dea0 WTF::RefCountDebugger::willRef(unsigned int, WTF::RefCountIsThreadSafe) const + 52 3 WebCore 0x324b21e28 WTF::RefCountedBase::ref() const + 48 4 WebCore 0x325269544 WTF::RefCountedAndCanMakeWeakPtr<WebCore::PlatformSpeechSynthesizer>::ref() const + 32 5 WebCore 0x325269478 WTF::DefaultRefDerefTraits<WebCore::PlatformSpeechSynthesizer>::ref(WebCore::PlatformSpeechSynthesizer&) + 32 6 WebCore 0x325269c30 WTF::Ref<WebCore::PlatformSpeechSynthesizer, WTF::RawPtrTraits<WebCore::PlatformSpeechSynthesizer>, WTF::DefaultRefDerefTraits<WebCore::PlatformSpeechSynthesizer>>::Ref(WebCore::PlatformSpeechSynthesizer&) + 40 7 WebCore 0x325265728 WTF::Ref<WebCore::PlatformSpeechSynthesizer, WTF::RawPtrTraits<WebCore::PlatformSpeechSynthesizer>, WTF::DefaultRefDerefTraits<WebCore::PlatformSpeechSynthesizer>>::Ref(WebCore::PlatformSpeechSynthesizer&) + 40 8 WebCore 0x325267d98 invocation function for block in WebCore::PlatformSpeechSynthesizer::initializeVoiceList() + 64 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-15 23:50:00 PST
<
rdar://problem/168285130
>
Chris Dumez
Comment 2
2026-01-15 23:51:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56694
EWS
Comment 3
2026-01-16 02:03:51 PST
Committed
305701@main
(477da9e88b08): <
https://commits.webkit.org/305701@main
> Reviewed commits have been landed. Closing PR #56694 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug