Cherry-pick 477da9e88b08. rdar://168363177

Regression(305673@main): Crash under RefCountDebugger::applyRefDerefThreadingCheck()
    https://bugs.webkit.org/show_bug.cgi?id=305628
    rdar://168285130

    Reviewed by Ryosuke Niwa.

    Address the crash by only ref'ing the PlatformSpeechSynthesizer on the
    main thread.

    * Source/WebCore/platform/PlatformSpeechSynthesizer.h:
    * Source/WebCore/platform/cocoa/PlatformSpeechSynthesizerCocoa.mm:
    (WebCore::PlatformSpeechSynthesizer::appendVoices):
    (WebCore::PlatformSpeechSynthesizer::initializeVoiceList):

    Canonical link: https://commits.webkit.org/305701@main

Identifier: 305413.212@safari-7624-branch